# base-fastapi-project

./: LICENSE  README.md  docker-compose.yml
src/: Dockerfile  Makefile  main.py  pyproject.toml
src/api/: router.py
src/api/v1/: __init__.py
src/core/: config.py  constants.py  enum.py  exceptions.py
src/db/migrations/: env.py
src/db/models/: __init__.py
src/db/repositories/: __init__.py  base.py
src/schemas/: base.py
src/storages/: __init__.py  base.py  fs.py  s3.py  session.py  utils.py
src/tests/: conftest.py  fixtures.py
src/tests/career_history/test_integration/: base.py  test_get_career_history.py
src/tests/factories/: __init__.py  base.py  fakers.py  utils.py
src/tests/utils/: db.py  utils.py
